build based on 66e2712

--- a/dev/actors.html
+++ b/dev/actors.html
@@ -165,22 +165,22 @@ ActorQED(dd, act)</code></pre></div></div><div class="admonition is-info"><heade
 ├─ <a href='act_details.html#act.ActorNeutronics.N'>N</a>
 └─ <a href='act_details.html#act.ActorNeutronics.do_plot'>do_plot</a>
 </code></pre><h2 id="Pedestal-(3-actors)"><a class="docs-heading-anchor" href="#Pedestal-(3-actors)">Pedestal (3 actors)</a><a id="Pedestal-(3-actors)-1"></a><a class="docs-heading-anchor-permalink" href="#Pedestal-(3-actors)" title="Permalink"></a></h2><h3 id="Pedestal"><a class="docs-heading-anchor" href="#Pedestal">Pedestal</a><a id="Pedestal-1"></a><a class="docs-heading-anchor-permalink" href="#Pedestal" title="Permalink"></a></h3><article class="docstring"><header><a class="docstring-article-toggle-button fa-solid fa-chevron-down" href="javascript:;" title="Collapse docstring"></a><a class="docstring-binding" id="FUSE.ActorPedestal-Tuple{IMASdd.dd, FUSE.ParametersAllActors}" href="#FUSE.ActorPedestal-Tuple{IMASdd.dd, FUSE.ParametersAllActors}"><code>FUSE.ActorPedestal</code></a> — <span class="docstring-category">Method</span><span class="is-flex-grow-1 docstring-article-toggle-button" title="Collapse docstring"></span></header><section><div><pre><code class="language-julia hljs">ActorPedestal(dd::IMAS.dd, act::ParametersAllActors; kw...)</code></pre><p>Evaluates the pedestal boundary condition (height and width)</p></div><a class="docs-sourcelink" target="_blank" href="https://github.com/ProjectTorreyPines/FUSE.jl/blob/66e2712ab035605c8b61606edb0fae615a8c5b0e/src/actors/pedestal/pedestal_actor.jl#L50-L54">source</a></section></article><pre class="documenter-example-output"><code class="nohighlight hljs ansi"><span class="sgr1">ActorPedestal</span>
-├─ <a href='act_details.html#act.ActorPedestal.rho_nml'>rho_nml</a>
-├─ <a href='act_details.html#act.ActorPedestal.rho_ped'>rho_ped</a>
-├─ <a href='act_details.html#act.ActorPedestal.T_ratio_pedestal'>T_ratio_pedestal</a>
-├─ <a href='act_details.html#act.ActorPedestal.Te_sep'>Te_sep</a>
-├─ <a href='act_details.html#act.ActorPedestal.ip_from'>ip_from</a>
-├─ <a href='act_details.html#act.ActorPedestal.βn_from'>βn_from</a>
-├─ <a href='act_details.html#act.ActorPedestal.ne_from'>ne_from</a>
-├─ <a href='act_details.html#act.ActorPedestal.zeff_from'>zeff_from</a>
-├─ <a href='act_details.html#act.ActorPedestal.mode_transitions'>mode_transitions</a>  [s]
-├─ <a href='act_details.html#act.ActorPedestal.density_match'>density_match</a>
-├─ <a href='act_details.html#act.ActorPedestal.model'>model</a>
-├─ <a href='act_details.html#act.ActorPedestal.tau_t'>tau_t</a>  [s]
-├─ <a href='act_details.html#act.ActorPedestal.tau_n'>tau_n</a>  [s]
-├─ <a href='act_details.html#act.ActorPedestal.density_ratio_L_over_H'>density_ratio_L_over_H</a>
-├─ <a href='act_details.html#act.ActorPedestal.zeff_ratio_L_over_H'>zeff_ratio_L_over_H</a>
-└─ <a href='act_details.html#act.ActorPedestal.do_plot'>do_plot</a>
+├─ <a href='act_details.html#ActorPedestal.rho_nml'>rho_nml</a>
+├─ <a href='act_details.html#ActorPedestal.rho_ped'>rho_ped</a>
+├─ <a href='act_details.html#ActorPedestal.T_ratio_pedestal'>T_ratio_pedestal</a>
+├─ <a href='act_details.html#ActorPedestal.Te_sep'>Te_sep</a>
+├─ <a href='act_details.html#ActorPedestal.ip_from'>ip_from</a>
+├─ <a href='act_details.html#ActorPedestal.βn_from'>βn_from</a>
+├─ <a href='act_details.html#ActorPedestal.ne_from'>ne_from</a>
+├─ <a href='act_details.html#ActorPedestal.zeff_from'>zeff_from</a>
+├─ <a href='act_details.html#ActorPedestal.mode_transitions'>mode_transitions</a>  [s]
+├─ <a href='act_details.html#ActorPedestal.density_match'>density_match</a>
+├─ <a href='act_details.html#ActorPedestal.model'>model</a>
+├─ <a href='act_details.html#ActorPedestal.tau_t'>tau_t</a>  [s]
+├─ <a href='act_details.html#ActorPedestal.tau_n'>tau_n</a>  [s]
+├─ <a href='act_details.html#ActorPedestal.density_ratio_L_over_H'>density_ratio_L_over_H</a>
+├─ <a href='act_details.html#ActorPedestal.zeff_ratio_L_over_H'>zeff_ratio_L_over_H</a>
+└─ <a href='act_details.html#ActorPedestal.do_plot'>do_plot</a>
 </code></pre><h3 id="EPED"><a class="docs-heading-anchor" href="#EPED">EPED</a><a id="EPED-1"></a><a class="docs-heading-anchor-permalink" href="#EPED" title="Permalink"></a></h3><article class="docstring"><header><a class="docstring-article-toggle-button fa-solid fa-chevron-down" href="javascript:;" title="Collapse docstring"></a><a class="docstring-binding" id="FUSE.ActorEPED-Tuple{IMASdd.dd, FUSE.ParametersAllActors}" href="#FUSE.ActorEPED-Tuple{IMASdd.dd, FUSE.ParametersAllActors}"><code>FUSE.ActorEPED</code></a> — <span class="docstring-category">Method</span><span class="is-flex-grow-1 docstring-article-toggle-button" title="Collapse docstring"></span></header><section><div><pre><code class="language-julia hljs">ActorEPED(dd::IMAS.dd, act::ParametersAllActors; kw...)</code></pre><p>Evaluates the pedestal boundary condition (height and width)</p></div><a class="docs-sourcelink" target="_blank" href="https://github.com/ProjectTorreyPines/FUSE.jl/blob/66e2712ab035605c8b61606edb0fae615a8c5b0e/src/actors/pedestal/EPED_actor.jl#L36-L40">source</a></section></article><pre class="documenter-example-output"><code class="nohighlight hljs ansi"><span class="sgr1">ActorEPED</span>
 ├─ <a href='act_details.html#act.ActorEPED.rho_nml'>rho_nml</a>
 ├─ <a href='act_details.html#act.ActorEPED.rho_ped'>rho_ped</a>
@@ -297,4 +297,4 @@ ActorQED(dd, act)</code></pre></div></div><div class="admonition is-info"><heade
 ├─ <a href='act_details.html#act.ActorParticleHeatFlux.merge_wall'>merge_wall</a>
 ├─ <a href='act_details.html#act.ActorParticleHeatFlux.step'>step</a>  [m]
 └─ <a href='act_details.html#act.ActorParticleHeatFlux.do_plot'>do_plot</a>
-</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="cases.html">« Use Cases</a><a class="docs-footer-nextpage" href="act.html">act parameters »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.9.0 on <span class="colophon-date" title="Tuesday 18 March 2025 03:13">Tuesday 18 March 2025</span>. Using Julia version 1.11.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="cases.html">« Use Cases</a><a class="docs-footer-nextpage" href="act.html">act parameters »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.9.0 on <span class="colophon-date" title="Wednesday 19 March 2025 03:15">Wednesday 19 March 2025</span>. Using Julia version 1.11.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
