--- a/dev/act.html
+++ b/dev/act.html
@@ -4,9 +4,9 @@
   gtag('js', new Date());
   gtag('config', 'G-65D8V8C8VQ', {'page_path': location.pathname + location.search + location.hash});
 </script><script data-outdated-warner src="assets/warner.js"></script><link href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/juliamono/0.050/juliamono.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/fontawesome.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/solid.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/brands.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.8/katex.min.css" rel="stylesheet" type="text/css"/><script>documenterBaseURL="."</script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" data-main="assets/documenter.js"></script><script src="search_index.js"></script><script src="siteinfo.js"></script><script src="../versions.js"></script><link class="docs-theme-link" rel="stylesheet" type="text/css" href="assets/themes/catppuccin-mocha.css" data-theme-name="catppuccin-mocha"/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="assets/themes/catppuccin-macchiato.css" data-theme-name="catppuccin-macchiato"/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="assets/themes/catppuccin-frappe.css" data-theme-name="catppuccin-frappe"/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="assets/themes/catppuccin-latte.css" data-theme-name="catppuccin-latte"/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="assets/themes/documenter-dark.css" data-theme-name="documenter-dark" data-theme-primary-dark/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="assets/themes/documenter-light.css" data-theme-name="documenter-light" data-theme-primary/><script src="assets/themeswap.js"></script><link href="assets/favicon.ico" rel="icon" type="image/x-icon"/></head><body><div id="documenter"><nav class="docs-sidebar"><a class="docs-logo" href="index.html"><img class="docs-light-only" src="assets/logo.svg" alt="FUSE logo"/><img class="docs-dark-only" src="assets/logo-dark.svg" alt="FUSE logo"/></a><button class="docs-search-query input is-rounded is-small is-clickable my-2 mx-auto py-1 px-2" id="documenter-search-query">Search docs (Ctrl + /)</button><ul class="docs-menu"><li><a class="tocitem" href="index.html">Main</a></li><li><span class="tocitem">Learn</span><ul><li><a class="tocitem" href="tutorial.html">Tutorial</a></li><li><a class="tocitem" href="examples.html">Examples</a></li><li><a class="tocitem" href="pubs.html">Publications</a></li></ul></li><li><a class="tocitem" href="cases.html">Use Cases</a></li><li><span class="tocitem">Actors</span><ul><li><a class="tocitem" href="actors.html">List of actors</a></li><li class="is-active"><a class="tocitem" href="act.html">act parameters</a></li></ul></li><li><span class="tocitem">Initialization</span><ul><li><a class="tocitem" href="inits.html">Init routines</a></li><li><a class="tocitem" href="ini.html">ini parameters</a></li></ul></li><li><a class="tocitem" href="dd.html">Data Structure</a></li><li><span class="tocitem">Development</span><ul><li><a class="tocitem" href="deps.html">Ecosystem</a></li><li><a class="tocitem" href="develop.html">Contributing</a></li></ul></li><li><span class="tocitem">Install</span><ul><li><a class="tocitem" href="install.html">Install FUSE</a></li><li><a class="tocitem" href="install_saga.html">on SAGA</a></li><li><a class="tocitem" href="install_omega.html">on OMEGA</a></li></ul></li><li><span class="tocitem">License</span><ul><li><a class="tocitem" href="license.html">License</a></li><li><a class="tocitem" href="notice.html">Notice</a></li></ul></li></ul><div class="docs-version-selector field has-addons"><div class="control"><span class="docs-label button is-static is-size-7">Version</span></div><div class="docs-selector control is-expanded"><div class="select is-fullwidth is-size-7"><select id="documenter-version-selector"></select></div></div></div></nav><div class="docs-main"><header class="docs-navbar"><a class="docs-sidebar-button docs-navbar-link fa-solid fa-bars is-hidden-desktop" id="documenter-sidebar-button" href="#"></a><nav class="breadcrumb"><ul class="is-hidden-mobile"><li><a class="is-disabled">Actors</a></li><li class="is-active"><a href="act.html">act parameters</a></li></ul><ul class="is-hidden-tablet"><li class="is-active"><a href="act.html">act parameters</a></li></ul></nav><div class="docs-right"><a class="docs-navbar-link" href="https://github.com/ProjectTorreyPines/FUSE.jl" title="View the repository on GitHub"><span class="docs-icon fa-brands"></span><span class="docs-label is-hidden-touch">GitHub</span></a><a class="docs-navbar-link" href="https://github.com/ProjectTorreyPines/FUSE.jl/blob/master/docs/src/act.md" title="Edit source on GitHub"><span class="docs-icon fa-solid"></span></a><a class="docs-settings-button docs-navbar-link fa-solid fa-gear" id="documenter-settings-button" href="#" title="Settings"></a><a class="docs-article-toggle-button fa-solid fa-chevron-up" id="documenter-article-toggle-button" href="javascript:;" title="Collapse all docstrings"></a></div></header><article class="content" id="documenter-page"><h1 id="act-Parameters"><a class="docs-heading-anchor" href="#act-Parameters">act Parameters</a><a id="act-Parameters-1"></a><a class="docs-heading-anchor-permalink" href="#act-Parameters" title="Permalink"></a></h1><pre class="documenter-example-output"><code class="nohighlight hljs ansi"><span class="sgr1">FUSE.ParametersActors</span>
-├─ <span class="sgr1">ActorAnalyticalTurbulence</span>
-│  ├─ <a href='act_details.html#act.ActorAnalyticalTurbulence.model'>model</a>
-│  └─ <a href='act_details.html#act.ActorAnalyticalTurbulence.rho_transport'>rho_transport</a>
+├─ <span class="sgr1">ActorAnalyticTurbulence</span>
+│  ├─ <a href='act_details.html#act.ActorAnalyticTurbulence.model'>model</a>
+│  └─ <a href='act_details.html#act.ActorAnalyticTurbulence.rho_transport'>rho_transport</a>
 ├─ <span class="sgr1">ActorBalanceOfPlant</span>
 ├─ <span class="sgr1">ActorBlanket</span>
 │  ├─ <a href='act_details.html#act.ActorBlanket.minimum_first_wall_thickness'>minimum_first_wall_thickness</a>  [m]
@@ -25,6 +25,12 @@
 │  ├─ <a href='act_details.html#act.ActorCXbuild.divertor_lfs_size_fraction'>divertor_lfs_size_fraction</a>
 │  ├─ <a href='act_details.html#act.ActorCXbuild.n_points'>n_points</a>
 │  └─ <a href='act_details.html#act.ActorCXbuild.do_plot'>do_plot</a>
+├─ <span class="sgr1">ActorControllerIp</span>
+│  ├─ <a href='act_details.html#act.ActorControllerIp.algorithm'>algorithm</a>
+│  ├─ <a href='act_details.html#act.ActorControllerIp.P'>P</a>
+│  ├─ <a href='act_details.html#act.ActorControllerIp.I'>I</a>
+│  ├─ <a href='act_details.html#act.ActorControllerIp.D'>D</a>
+│  └─ <a href='act_details.html#act.ActorControllerIp.Vloop_initial'>Vloop_initial</a>  [V]
 ├─ <span class="sgr1">ActorCoreRadHeatFlux</span>
 │  ├─ <a href='act_details.html#act.ActorCoreRadHeatFlux.N'>N</a>
 │  ├─ <a href='act_details.html#act.ActorCoreRadHeatFlux.r'>r</a>  [m]
@@ -133,12 +139,12 @@
 │  ├─ <a href='act_details.html#act.ActorFluxMatcher.evolve_plasma_sources'>evolve_plasma_sources</a>
 │  ├─ <a href='act_details.html#act.ActorFluxMatcher.find_widths'>find_widths</a>
 │  ├─ <a href='act_details.html#act.ActorFluxMatcher.max_iterations'>max_iterations</a>
-│  ├─ <a href='act_details.html#act.ActorFluxMatcher.optimizer_algorithm'>optimizer_algorithm</a>
+│  ├─ <a href='act_details.html#act.ActorFluxMatcher.algorithm'>algorithm</a>
 │  ├─ <a href='act_details.html#act.ActorFluxMatcher.step_size'>step_size</a>
 │  ├─ <a href='act_details.html#act.ActorFluxMatcher.Δt'>Δt</a>  [s]
-│  ├─ <a href='act_details.html#act.ActorFluxMatcher.save_input_tglf_folder'>save_input_tglf_folder</a>
 │  ├─ <a href='act_details.html#act.ActorFluxMatcher.relax'>relax</a>
-│  ├─ <a href='act_details.html#act.ActorFluxMatcher.norms'>norms</a>
+│  ├─ <a href='act_details.html#act.ActorFluxMatcher.scale_turbulence_law'>scale_turbulence_law</a>
+│  ├─ <a href='act_details.html#act.ActorFluxMatcher.scale_turbulence_value'>scale_turbulence_value</a>
 │  ├─ <a href='act_details.html#act.ActorFluxMatcher.do_plot'>do_plot</a>
 │  └─ <a href='act_details.html#act.ActorFluxMatcher.verbose'>verbose</a>
 ├─ <span class="sgr1">ActorFluxSwing</span>
@@ -148,7 +154,8 @@
 │  ├─ <a href='act_details.html#act.ActorHCD.ic_model'>ic_model</a>
 │  ├─ <a href='act_details.html#act.ActorHCD.lh_model'>lh_model</a>
 │  ├─ <a href='act_details.html#act.ActorHCD.nb_model'>nb_model</a>
-│  └─ <a href='act_details.html#act.ActorHCD.pellet_model'>pellet_model</a>
+│  ├─ <a href='act_details.html#act.ActorHCD.pellet_model'>pellet_model</a>
+│  └─ <a href='act_details.html#act.ActorHCD.neutral_model'>neutral_model</a>
 ├─ <span class="sgr1">ActorHFSsizing</span>
 │  ├─ <a href='act_details.html#act.ActorHFSsizing.error_on_technology'>error_on_technology</a>
 │  ├─ <a href='act_details.html#act.ActorHFSsizing.error_on_performance'>error_on_performance</a>
@@ -163,6 +170,9 @@
 ├─ <span class="sgr1">ActorNeoclassical</span>
 │  ├─ <a href='act_details.html#act.ActorNeoclassical.model'>model</a>
 │  └─ <a href='act_details.html#act.ActorNeoclassical.rho_transport'>rho_transport</a>
+├─ <span class="sgr1">ActorNeutralFueling</span>
+│  ├─ <a href='act_details.html#act.ActorNeutralFueling.τp_over_τe'>τp_over_τe</a>
+│  └─ <a href='act_details.html#act.ActorNeutralFueling.T_wall'>T_wall</a>  [eV]
 ├─ <span class="sgr1">ActorNeutronics</span>
 │  ├─ <a href='act_details.html#act.ActorNeutronics.N'>N</a>
 │  └─ <a href='act_details.html#act.ActorNeutronics.do_plot'>do_plot</a>
@@ -235,6 +245,8 @@
 │  ├─ <a href='act_details.html#act.ActorQLGYRO.rho_transport'>rho_transport</a>
 │  └─ <a href='act_details.html#act.ActorQLGYRO.lump_ions'>lump_ions</a>
 ├─ <span class="sgr1">ActorRABBIT</span>
+│  ├─ <a href='act_details.html#act.ActorRABBIT.remove_inputs'>remove_inputs</a>
+│  └─ <a href='act_details.html#act.ActorRABBIT.Δt_history'>Δt_history</a>  [s]
 ├─ <span class="sgr1">ActorReplay</span>
 │  └─ <a href='act_details.html#act.ActorReplay.replay_dd'>replay_dd</a>
 ├─ <span class="sgr1">ActorSimpleEC</span>
@@ -266,7 +278,7 @@
 │        ├─ <a href='act_details.html#act.ActorSimplePL.actuator.0.rho_0'>rho_0</a>
 │        └─ <a href='act_details.html#act.ActorSimplePL.actuator.0.width'>width</a>
 ├─ <span class="sgr1">ActorStationaryPlasma</span>
-│  ├─ <a href='act_details.html#act.ActorStationaryPlasma.max_iter'>max_iter</a>
+│  ├─ <a href='act_details.html#act.ActorStationaryPlasma.max_iterations'>max_iterations</a>
 │  ├─ <a href='act_details.html#act.ActorStationaryPlasma.convergence_error'>convergence_error</a>
 │  ├─ <a href='act_details.html#act.ActorStationaryPlasma.do_plot'>do_plot</a>
 │  └─ <a href='act_details.html#act.ActorStationaryPlasma.verbose'>verbose</a>
@@ -299,7 +311,9 @@
 │  ├─ <a href='act_details.html#act.ActorTGLF.rho_transport'>rho_transport</a>
 │  ├─ <a href='act_details.html#act.ActorTGLF.warn_nn_train_bounds'>warn_nn_train_bounds</a>
 │  ├─ <a href='act_details.html#act.ActorTGLF.custom_input_files'>custom_input_files</a>
-│  └─ <a href='act_details.html#act.ActorTGLF.lump_ions'>lump_ions</a>
+│  ├─ <a href='act_details.html#act.ActorTGLF.lump_ions'>lump_ions</a>
+│  ├─ <a href='act_details.html#act.ActorTGLF.save_input_tglfs_to_folder'>save_input_tglfs_to_folder</a>
+│  └─ <a href='act_details.html#act.ActorTGLF.debug'>debug</a>
 ├─ <span class="sgr1">ActorTORBEAM</span>
 ├─ <span class="sgr1">ActorThermalPlant</span>
 │  ├─ <a href='act_details.html#act.ActorThermalPlant.model'>model</a>
@@ -329,4 +343,4 @@
 └─ <span class="sgr1">ActorWholeFacility</span>
    ├─ <a href='act_details.html#act.ActorWholeFacility.update_plasma'>update_plasma</a>
    └─ <a href='act_details.html#act.ActorWholeFacility.update_build'>update_build</a>
-</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="actors.html">« List of actors</a><a class="docs-footer-nextpage" href="inits.html">Init routines »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.10.1 on <span class="colophon-date" title="Wednesday 2 April 2025 03:36">Wednesday 2 April 2025</span>. Using Julia version 1.11.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="actors.html">« List of actors</a><a class="docs-footer-nextpage" href="inits.html">Init routines »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.11.0 on <span class="colophon-date" title="Friday 9 May 2025 03:26">Friday 9 May 2025</span>. Using Julia version 1.11.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
