--- a/dev/act.html
+++ b/dev/act.html
@@ -264,6 +264,21 @@
 │  └─ <a href='act_details.html#act.ActorRABBIT.Δt_history'>Δt_history</a>  [s]
 ├─ <span class="sgr1">ActorReplay</span>
 │  └─ <a href='act_details.html#act.ActorReplay.replay_dd'>replay_dd</a>
+├─ <span class="sgr1">ActorSOL</span>
+│  └─ <a href='act_details.html#act.ActorSOL.model'>model</a>
+├─ <span class="sgr1">ActorSOLBox</span>
+│  ├─ <a href='act_details.html#act.ActorSOLBox.Te_t'>Te_t</a>  [eV]
+│  ├─ <a href='act_details.html#act.ActorSOLBox.Ti_t'>Ti_t</a>  [eV]
+│  ├─ <a href='act_details.html#act.ActorSOLBox.frac_cond'>frac_cond</a>
+│  ├─ <a href='act_details.html#act.ActorSOLBox.frac_mom'>frac_mom</a>
+│  ├─ <a href='act_details.html#act.ActorSOLBox.κ0_e'>κ0_e</a>
+│  ├─ <a href='act_details.html#act.ActorSOLBox.κ0_i'>κ0_i</a>
+│  ├─ <a href='act_details.html#act.ActorSOLBox.mass_ion'>mass_ion</a>  [amu]
+│  ├─ <a href='act_details.html#act.ActorSOLBox.recycling_coeff_i'>recycling_coeff_i</a>
+│  ├─ <a href='act_details.html#act.ActorSOLBox.recycling_coeff_e'>recycling_coeff_e</a>
+│  ├─ <a href='act_details.html#act.ActorSOLBox.λq'>λq</a>  [m]
+│  ├─ <a href='act_details.html#act.ActorSOLBox.verbose'>verbose</a>
+│  └─ <a href='act_details.html#act.ActorSOLBox.do_plot'>do_plot</a>
 ├─ <span class="sgr1">ActorSimpleEC</span>
 │  └─ <span class="sgr1">actuator</span>
 │     └─ <span class="sgr1">1</span>
@@ -327,8 +342,7 @@
 │  ├─ <a href='act_details.html#act.ActorTGLF.warn_nn_train_bounds'>warn_nn_train_bounds</a>
 │  ├─ <a href='act_details.html#act.ActorTGLF.custom_input_files'>custom_input_files</a>
 │  ├─ <a href='act_details.html#act.ActorTGLF.lump_ions'>lump_ions</a>
-│  ├─ <a href='act_details.html#act.ActorTGLF.save_input_tglfs_to_folder'>save_input_tglfs_to_folder</a>
-│  └─ <a href='act_details.html#act.ActorTGLF.debug'>debug</a>
+│  └─ <a href='act_details.html#act.ActorTGLF.save_input_tglfs_to_folder'>save_input_tglfs_to_folder</a>
 ├─ <span class="sgr1">ActorTORBEAM</span>
 ├─ <span class="sgr1">ActorThermalPlant</span>
 │  ├─ <a href='act_details.html#act.ActorThermalPlant.model'>model</a>
@@ -358,4 +372,4 @@
 └─ <span class="sgr1">ActorWholeFacility</span>
    ├─ <a href='act_details.html#act.ActorWholeFacility.update_plasma'>update_plasma</a>
    └─ <a href='act_details.html#act.ActorWholeFacility.update_build'>update_build</a>
-</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="actors.html">« List of actors</a><a class="docs-footer-nextpage" href="inits.html">Init routines »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.12.0 on <span class="colophon-date" title="Tuesday 17 June 2025 03:02">Tuesday 17 June 2025</span>. Using Julia version 1.11.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="actors.html">« List of actors</a><a class="docs-footer-nextpage" href="inits.html">Init routines »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.12.0 on <span class="colophon-date" title="Wednesday 18 June 2025 03:04">Wednesday 18 June 2025</span>. Using Julia version 1.11.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
