--- a/dev/act.html
+++ b/dev/act.html
@@ -59,8 +59,7 @@
 │  ├─ <a href='act_details.html#act.ActorCoreRadHeatFlux.step'>step</a>  [m]
 │  └─ <a href='act_details.html#act.ActorCoreRadHeatFlux.do_plot'>do_plot</a>
 ├─ <span class="sgr1">ActorCoreTransport</span>
-│  ├─ <a href='act_details.html#act.ActorCoreTransport.model'>model</a>
-│  └─ <a href='act_details.html#act.ActorCoreTransport.do_plot'>do_plot</a>
+│  └─ <a href='act_details.html#act.ActorCoreTransport.model'>model</a>
 ├─ <span class="sgr1">ActorCosting</span>
 │  ├─ <a href='act_details.html#act.ActorCosting.model'>model</a>
 │  ├─ <a href='act_details.html#act.ActorCosting.construction_start_year'>construction_start_year</a>  [year]
@@ -291,6 +290,7 @@
 │  ├─ <a href='act_details.html#act.ActorSOLBox.λq'>λq</a>  [m]
 │  ├─ <a href='act_details.html#act.ActorSOLBox.verbose'>verbose</a>
 │  └─ <a href='act_details.html#act.ActorSOLBox.do_plot'>do_plot</a>
+├─ <span class="sgr1">ActorSawteeth</span>
 ├─ <span class="sgr1">ActorSimpleEC</span>
 │  └─ <span class="sgr1">actuator</span>
 │     └─ <span class="sgr1">1</span>
@@ -384,4 +384,4 @@
 └─ <span class="sgr1">ActorWholeFacility</span>
    ├─ <a href='act_details.html#act.ActorWholeFacility.update_plasma'>update_plasma</a>
    └─ <a href='act_details.html#act.ActorWholeFacility.update_build'>update_build</a>
-</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="actors.html">« List of actors</a><a class="docs-footer-nextpage" href="inits.html">Init routines »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.14.1 on <span class="colophon-date" title="Saturday 16 August 2025 03:02">Saturday 16 August 2025</span>. Using Julia version 1.11.6.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="actors.html">« List of actors</a><a class="docs-footer-nextpage" href="inits.html">Init routines »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.14.1 on <span class="colophon-date" title="Sunday 17 August 2025 03:17">Sunday 17 August 2025</span>. Using Julia version 1.11.6.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
