build based on 12db82e

--- a/dev/act.html
+++ b/dev/act.html
@@ -102,6 +102,7 @@
 │  ├─ <a href='act_details.html#act.ActorDynamicPlasma.evolve_current'>evolve_current</a>
 │  ├─ <a href='act_details.html#act.ActorDynamicPlasma.evolve_equilibrium'>evolve_equilibrium</a>
 │  ├─ <a href='act_details.html#act.ActorDynamicPlasma.evolve_pf_active'>evolve_pf_active</a>
+│  ├─ <a href='act_details.html#act.ActorDynamicPlasma.evolve_sawteeth'>evolve_sawteeth</a>
 │  ├─ <a href='act_details.html#act.ActorDynamicPlasma.ip_controller'>ip_controller</a>
 │  ├─ <a href='act_details.html#act.ActorDynamicPlasma.time_derivatives_sources'>time_derivatives_sources</a>
 │  └─ <a href='act_details.html#act.ActorDynamicPlasma.verbose'>verbose</a>
@@ -300,7 +301,11 @@
 │  ├─ <a href='act_details.html#act.ActorSOLBox.λq'>λq</a>  [m]
 │  ├─ <a href='act_details.html#act.ActorSOLBox.verbose'>verbose</a>
 │  └─ <a href='act_details.html#act.ActorSOLBox.do_plot'>do_plot</a>
-├─ <span class="sgr1">ActorSawteeth</span>
+├─ <span class="sgr1">ActorSawteethSource</span>
+│  ├─ <a href='act_details.html#act.ActorSawteethSource.flat_factor'>flat_factor</a>
+│  ├─ <a href='act_details.html#act.ActorSawteethSource.period'>period</a>  [s]
+│  ├─ <a href='act_details.html#act.ActorSawteethSource.qmin_desired'>qmin_desired</a>
+│  └─ <a href='act_details.html#act.ActorSawteethSource.ignore_before_time'>ignore_before_time</a>  [s]
 ├─ <span class="sgr1">ActorSimpleEC</span>
 │  └─ <span class="sgr1">actuator</span>
 │     └─ <span class="sgr1">1</span>
@@ -394,4 +399,4 @@
 └─ <span class="sgr1">ActorWholeFacility</span>
    ├─ <a href='act_details.html#act.ActorWholeFacility.update_plasma'>update_plasma</a>
    └─ <a href='act_details.html#act.ActorWholeFacility.update_build'>update_build</a>
-</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="ini.html">« <code>ini</code> Parameters</a><a class="docs-footer-nextpage" href="develop.html">Development »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.16.1 on <span class="colophon-date" title="Wednesday 21 January 2026 03:31">Wednesday 21 January 2026</span>. Using Julia version 1.12.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="ini.html">« <code>ini</code> Parameters</a><a class="docs-footer-nextpage" href="develop.html">Development »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.16.1 on <span class="colophon-date" title="Wednesday 21 January 2026 17:11">Wednesday 21 January 2026</span>. Using Julia version 1.12.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
